[package]
name = "dmm-logger"
description = "Connects to a digital multimeter and log measurements into CSV files."
version = "0.1.0"
authors = ["Michael Roth <mail@mroth.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
