[package]
name = "dmm-logger"
description = "Connects to a digital multimeter and log measurements into CSV files."
repository = "https://github.com/mrothNET/dmm-logger"
version = "1.0.2"
keywords = ["SCPI", "DMM", "logger"]
authors = ["Michael Roth <mail@mroth.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
regex = "1"
signal-hook = "0.3"
unicode-segmentation = "1"
